--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -34,7 +34,7 @@
 }
 .what-box-in {
   flex-direction: column;
-  height: 800px;
+  height: 1000px;
   margin-left: 200px;
   position: relative;
   display: none;
@@ -52,18 +52,18 @@
 
 .what-noTouch:hover,
 .what-content-active {
-  min-height: 50%;
-  padding: 40px 50px;
+  min-height: 40%;
+  padding: 30px 50px;
 }
 
 .what-noTouch:hover ~ .what-content,
 .what-box-in:hover .what-noTouch:not(:hover),
 .what-content.what-sibling {
-  min-height: 16.6%;
+  min-height: 20%;
   padding: 10px 50px;
 }
 .what-content h3 {
-  font-size: 35px;
+  font-size: 28px;
   letter-spacing: 1px;
   margin: 0;
 }
